--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,13 @@ services:
     build: .
     ports:
       - "5000:5000"
+    environment:
+      - REDIS_HOST=redis
     depends_on:
       - redis
 
   redis:
-    image: redis:7-alpine
+    image: redis:7
+    ports:
+      - "6379:6379"
+
